[gd_scene load_steps=2 format=3 uid="uid://cagyovi7sb1p7"]

[ext_resource type="Script" path="res://scenes/menu/game_over_win/game_over_win_menu.gd" id="1_p5tr1"]

[node name="GameOverWinMenu" type="CanvasLayer"]
process_mode = 3
layer = 20
script = ExtResource("1_p5tr1")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "VICTORY !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You successfully repelled the enemy. Well done!"

[node name="ReplayButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Replay"

[node name="QuitToMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit to Menu"
